# crowdfunding-dapp

./: LICENSE  README.md  truffle-config.js
client/: package.json
client/public/: index.html
client/src/: App.css  App.js  getWeb3.js  index.css  index.js  serviceWorker.js  utils.js
client/src/components/: Campaigns.css  Campaigns.js  Error.js  Explore.js  Footer.js  Fund.js  Home.css  Home.js  Navbar.js  News.js  learn.js
client/src/components/campaigns/: CampaignPage.js
contracts/: CrowdFunding.sol  Funding.sol  Migrations.sol  ReentrancyGuard.sol  SimpleStorage.sol
migrations/: 1_deploy_contracts.js  2_deploy_contracts.js
server/: .gitignore  Cargo.toml  data.js  db.js  db.sql  index.js  middleware.js  package.json
server/src/: main.rs
server/src/routes/: campaigns.rs  privileged.rs
server_old/: db.sql  index.js
test/: TestSimpleStorage.sol  crowdfunding.js  simplestorage.js
