[package]
name = "server_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.21.4", features = ["async-std-comp"] }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
