[package]
name = "server_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.15.0", features = ["rt-multi-thread", "macros"]}
actix-web = "4.0.0-beta.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
redis = { version = "0.21.4", features = ["async-std-comp"] }
web3 = "0.17.0"
tokio-postgres = "0.7.5"
deadpool-postgres = "0.10.1"
